--- a/index.html
+++ b/index.html
@@ -17,22 +17,17 @@
           src="Project2-Assets/pikmin_blue.glb"
         ></a-asset-item>
         <a-asset-item
-          id="purple_pikmin"
-          src="Project2-Assets/pikmin_purple.glb"
-        ></a-asset-item>
-        <a-asset-item
           id="yellow_pikmin"
           src="Project2-Assets/pikmin_yellow.glb"
         ></a-asset-item>
       </a-assets>
 
-      <a-marker type="pattern" url="/pattern-lem-black.patt">
+      <a-marker type="pattern" url="/pattern-library-marker.patt">
         <a-entity
           gltf-model="#red_pikmin"
           rotation="-90 0 0"
           scale="3.0 3.0 3.0"
           position="0.5 0 0.6"
-          animation="property: position; to: 3 0 -3; dur: 500; easing: linear; loop: true"
         ></a-entity>
         <a-entity
           gltf-model="#blue_pikmin"
