--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         ></a-asset-item>
       </a-assets>
 
-      <a-marker type="pattern" url="/pattern-lem-black.patt">
+      <a-marker type="pattern" url="/pattern-library-marker2.patt">
         <a-entity
           gltf-model="#red_pikmin"
           rotation="-90 0 0"
