stopped looping blue pikmin

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           rotation="-90 0 0"
           scale="0.8 0.8 0.8"
           position="0.2 0 1.0"
-          animation="property: position; to: 0.2 0 0.5; dur: 1000; easing: linear; loop: true"
+          animation="property: position; to: 0.2 0 0.5; dur: 1000; easing: linear; loop: false"
         ></a-entity>
         <a-entity
           gltf-model="#yellow_pikmin"
